# geektime-bootcamp-ai

./: package-lock.json
.chats/: 20260111.md  w7.md
.cursor/commands/: optimize-images.md
.cursor/rules/: rust-best-practices.mdc  specify-rules.mdc
.github/workflows/: ci.yml  codeql.yml  deploy-site.yml  pre-commit.yml
.specify/memory/: constitution.md
site/: package-lock.json  package.json
site/src/data/: projects.ts
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-db-query-tool/checklists/: requirements.md
specs/001-db-query-tool/contracts/: api-v1.yaml
specs/site/: instructions.md
specs/w1/: instructions.md
specs/w2/: 0001-improvement.md  instructions.md
specs/w3/: instructions.md
specs/w3/db-query/: 0001-code-review.md
specs/w3/raflow/: 0001-spec.md  0002-design.md  0003-implementation-plan.md  0004-design.md
specs/w5/: 0009-pg-mcp-homework-plan-review.md  0009-pg-mcp-homework-plan.md  0010-pg-mcp-homework-implementation-review.md
specs/w7/: 0001-prd.md  0002-design-spec.md
w1/project-alpha/: README.md  docker-compose.yml
w1/project-alpha/backend/: Dockerfile
w1/project-alpha/frontend/: Dockerfile  nginx.conf  package.json
w2/db_query/backend/: pyproject.toml
w2/db_query/fixtures/: test.rest
w2/db_query/frontend/: package-lock.json  package.json
w3/raflow/: .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  package.json  vite.config.ts
w3/raflow/.github/workflows/: build.yml
w3/raflow/benches/: audio_benchmark.rs
w3/raflow/docs/: PROGRESS.md  phase2-completion.md  phase3-completion.md  phase4-completion.md  phase5-completion.md  phase6-completion.md  testing-guide.md  user-guide.md
w3/raflow/src/: App.tsx
w3/raflow/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
w3/raflow/src-tauri/benches/: audio_benchmark.rs
w3/raflow/src-tauri/capabilities/: default.json
w3/raflow/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
w3/raflow/src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs  processor.rs  resampler.rs
w3/raflow/src-tauri/src/config/: mod.rs
w3/raflow/src-tauri/src/core/: app.rs  mod.rs
w3/raflow/src-tauri/src/input/: clipboard.rs  focus.rs  injector.rs  keyboard.rs  mod.rs
w3/raflow/src-tauri/src/network/: client.rs  manager.rs  mod.rs  protocol.rs  state_machine.rs
w3/raflow/src-tauri/src/system/: hotkey.rs  mod.rs  tray.rs  window.rs
w3/raflow/src-tauri/tests/: input_integration.rs  network_integration.rs
w3/raflow/src/components/: OverlayWindow.tsx  SettingsPanel.tsx
w3/raflow/src/hooks/: useHotkey.ts
w3/raflow/src/store/: settings.ts  transcript.ts
w3/raflow/src/styles/: overlay.css  settings.css
w5/pg-mcp/: .env.backup  .env.example  .env.multi-db  IMPLEMENTATION_COMPLETE.md  PHASE5_TESTING_SUMMARY.md  main.py  pyproject.toml  pytest.ini  query_helper.py  run_tests.py  test_connection.py
w5/pg-mcp/docs/: OBSERVABILITY.md
w6/simple-agent/: package-lock.json  package.json
w7/genslides/: .gitignore
w7/genslides/backend/: .env.example  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  config.py  main.py  pyproject.toml  verify_imports.py
w7/genslides/backend/api/: dependencies.py
w7/genslides/backend/api/routes/: cost.py  images.py  slides.py  style.py
w7/genslides/backend/api/schemas/: cost.py  image.py  slide.py  style.py
w7/genslides/backend/clients/: gemini_client.py
w7/genslides/backend/models/: project.py  slide.py  style.py
w7/genslides/backend/repositories/: image_repository.py  slide_repository.py
w7/genslides/backend/services/: cost_service.py  image_service.py  slide_service.py  style_service.py
w7/genslides/backend/utils/: hash.py
(+79 files in other folders)
