[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
# Tauri 核心生态
tauri = { version = "2.9", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2.4"

# 异步运行时与网络
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
http = "1.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# 音频处理
cpal = "0.16"
rubato = "0.16.2"
nnnoiseless = "0.5.1"

# 系统交互
enigo = "0.6.1"
active-win-pos-rs = "0.9"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具库
anyhow = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dashmap = "6.1"
arc-swap = "1.7"
crossbeam = "0.8"

[workspace.dependencies.objc]
version = "0.2"

[workspace.dependencies.cocoa]
version = "0.26"

[workspace.dependencies.core-foundation]
version = "0.10"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
