[package]
name = "raflow"
version = "0.1.0"
description = "实时语音听写工具"
authors = ["RAFlow Team"]
edition = "2024"
rust-version = "1.90"
license = "MIT"
publish = false

[lib]
name = "raflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-store = { workspace = true }

# 异步运行时
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }

# 音频处理
cpal = { workspace = true }
rubato = { workspace = true }
nnnoiseless = { workspace = true }

# 系统交互
enigo = { workspace = true }
active-win-pos-rs = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam = { workspace = true }
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { workspace = true }
cocoa = { workspace = true }
core-foundation = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
mockall = "0.14"

[[bench]]
name = "audio_benchmark"
harness = false
path = "benches/audio_benchmark.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
